cluster/apps/kubedoom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubedoom
  name: kubedoom
  namespace: kubedoom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoom
  template:
    metadata:
      labels:
        app: kubedoom
    spec:
      hostNetwork: true
      serviceAccountName: kubedoom
      containers:
        - image: ghcr.io/storax/kubedoom:latest
          name: kubedoom
          ports:
            - containerPort: 5900
              name: vnc
