cluster/apps/kubedoom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedoom-service
  namespace: kubedoom
spec:
  type: ClusterIP
  selector:
    app: kubedoom
  ports:
    - port: 5900
      targetPort: 5900
      protocol: TCP
