cluster/apps/kubedoom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedoom-ingress
  namespace: kubedoom
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubedoom-service
                port:
                  number: 5900
  tls:
    - hosts:
        - kubedoom
